--- a/index.html
+++ b/index.html
@@ -81,135 +81,122 @@
                 <h1>Flash Sales</h1>
                 <div class="time">
                     <div class="time-card">
-                        <p>Days</p>
-                        <h1 id="day"></h1>
+                        <h1 class="hello"></h1>
                     </div>
-                    <div class="time-card">
-                        <p>Hours</p>
-                        <h1 id="hour"></h1>
-                    </div>
-                    <div class="time-card">
-                        <p>Minutes</p>
-                        <h1 id="minute"></h1>
-                    </div>
-                    <div class="time-card">
-                        <p>Seconds</p>
-                        <h1 id="second"></h1>
+                    <div class="swipe">
+                        <div class="keyingi swiper">
+                            <i class="fa-solid fa-left"></i>
+                        </div>
+                        <div class="orqa swiper">
+                            <i class="fa-solid fa-right"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="swipe">
-                    <div class="keyingi swiper">
-                        <i class="fa-solid fa-left"></i>
-                    </div>
-                    <div class="orqa swiper">
-                        <i class="fa-solid fa-right"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="products swiper product">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/pult.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>HAVIT HV-G92 Gamepad</h3>
-                            <p>$120</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/klaviatura.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>AK-900 Wired Keyboard</h3>
-                            <p>$960</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">
-                                -40%
+                <div class="products swiper product">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/pult.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
                             </div>
-                            <img src="assets/IMAGES/televizor.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>IPS LCD Gaming Monitor</h3>
-                            <p>$370</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/chair.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>S-Series Comfort Chair</h3>
-                            <p>$375</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/pult.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>HAVIT HV-G92 Gamepad</h3>
-                            <p>$120</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/klaviatura.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>AK-900 Wired Keyboard</h3>
-                            <p>$960</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">
-                                -40%
+                            <div class="text">
+                                <h3>HAVIT HV-G92 Gamepad</h3>
+                                <p>$120</p>
+                                <span>⭐⭐⭐⭐⭐</span>
                             </div>
-                            <img src="assets/IMAGES/televizor.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
                         </div>
-                        <div class="text">
-                            <h3>IPS LCD Gaming Monitor</h3>
-                            <p>$370</p>
-                            <span>⭐⭐⭐⭐⭐</span>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/klaviatura.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>AK-900 Wired Keyboard</h3>
+                                <p>$960</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">
+                                    -40%
+                                </div>
+                                <img src="assets/IMAGES/televizor.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>IPS LCD Gaming Monitor</h3>
+                                <p>$370</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/chair.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>S-Series Comfort Chair</h3>
+                                <p>$375</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/pult.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>HAVIT HV-G92 Gamepad</h3>
+                                <p>$120</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/klaviatura.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>AK-900 Wired Keyboard</h3>
+                                <p>$960</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">
+                                    -40%
+                                </div>
+                                <img src="assets/IMAGES/televizor.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>IPS LCD Gaming Monitor</h3>
+                                <p>$370</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="img">
+                                <div class="aksiya">-40%</div>
+                                <img src="assets/IMAGES/chair.png" alt="">
+                                <div class="add-to-cart">Add To Cart</div>
+                            </div>
+                            <div class="text">
+                                <h3>S-Series Comfort Chair</h3>
+                                <p>$375</p>
+                                <span>⭐⭐⭐⭐⭐</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="img">
-                            <div class="aksiya">-40%</div>
-                            <img src="assets/IMAGES/chair.png" alt="">
-                            <div class="add-to-cart">Add To Cart</div>
-                        </div>
-                        <div class="text">
-                            <h3>S-Series Comfort Chair</h3>
-                            <p>$375</p>
-                            <span>⭐⭐⭐⭐⭐</span>
-                        </div>
-                    </div>
-                </div>
 
+                </div>
             </div>
         </div>
         <div class="win2">
@@ -342,22 +329,7 @@
                 <p>Categories</p>
                 <h1>Enhance Your Music Experience</h1>
                 <div class="time">
-                    <div class="time-card">
-                        <h3 id="day1">09</h3>
-                        <p>Days</p>
-                    </div>
-                    <div class="time-card">
-                        <h3 id="hour1">14</h3>
-                        <p>Hours</p>
-                    </div>
-                    <div class="time-card">
-                        <h3 id="minute1">13</h3>
-                        <p>Minutes</p>
-                    </div>
-                    <div class="time-card">
-                        <h3 id="second1">38</h3>
-                        <p>Seconds</p>
-                    </div>
+                    <h1 class="hellooo"></h1>
                 </div>
                 <button>Buy Now!</button>
 
@@ -625,6 +597,7 @@
                 <i class="fa-regular fa-up"></i>
             </a>
         </div>
+
     </main>
     <footer>
         <div class="center">
