--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <a href="#header">
+        <i class="fa-regular fa-up"></i>
+    </a>
     <header id="header">
         <div class="nav1">
             <p>Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%! <span>ShopNow</span></p>
@@ -78,135 +81,143 @@
         </div>
         <div class="win2">
             <div class="top">
-                <h1>Flash Sales</h1>
+                <div class="left">
+                    <h3 class="qiziiiil">Today’s</h3>
+                    <h1>Flash Sales</h1>
+                </div>
                 <div class="time">
                     <div class="time-card">
                         <h1 class="hello"></h1>
                     </div>
-                    <div class="swipe">
-                        <div class="keyingi swiper">
-                            <i class="fa-solid fa-left"></i>
-                        </div>
-                        <div class="orqa swiper">
-                            <i class="fa-solid fa-right"></i>
-                        </div>
-                    </div>
                 </div>
-                <div class="products swiper product">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/pult.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>HAVIT HV-G92 Gamepad</h3>
-                                <p>$120</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/klaviatura.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>AK-900 Wired Keyboard</h3>
-                                <p>$960</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">
-                                    -40%
-                                </div>
-                                <img src="assets/IMAGES/televizor.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>IPS LCD Gaming Monitor</h3>
-                                <p>$370</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/chair.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>S-Series Comfort Chair</h3>
-                                <p>$375</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/pult.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>HAVIT HV-G92 Gamepad</h3>
-                                <p>$120</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/klaviatura.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>AK-900 Wired Keyboard</h3>
-                                <p>$960</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">
-                                    -40%
-                                </div>
-                                <img src="assets/IMAGES/televizor.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>IPS LCD Gaming Monitor</h3>
-                                <p>$370</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="img">
-                                <div class="aksiya">-40%</div>
-                                <img src="assets/IMAGES/chair.png" alt="">
-                                <div class="add-to-cart">Add To Cart</div>
-                            </div>
-                            <div class="text">
-                                <h3>S-Series Comfort Chair</h3>
-                                <p>$375</p>
-                                <span>⭐⭐⭐⭐⭐</span>
-                            </div>
-                        </div>
+                <div class="swipe">
+                    <div class="orqa swiper">
+                        <i class="fa-solid fa-left"></i>
                     </div>
-
+                    <div class="keyingi swiper">
+                        <i class="fa-solid fa-right"></i>
+                    </div>
                 </div>
             </div>
+            <div class="products swiper product">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/pult.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>HAVIT HV-G92 Gamepad</h3>
+                            <p>$120 <span>$160</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(88)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/klaviatura.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>AK-900 Wired Keyboard</h3>
+                            <p>$960 <span>$1160</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(75)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">
+                                -40%
+                            </div>
+                            <img src="assets/IMAGES/televizor.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>IPS LCD Gaming Monitor</h3>
+                            <p>$370 <span>$400</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(99)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/chair.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>S-Series Comfort Chair</h3>
+                            <p>$375 <span>$400</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(99)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/pult.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>HAVIT HV-G92 Gamepad</h3>
+                            <p>$120 <span>$160</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(88)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/klaviatura.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>AK-900 Wired Keyboard</h3>
+                            <p>$960 <span>$1160</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(75)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">
+                                -40%
+                            </div>
+                            <img src="assets/IMAGES/televizor.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>IPS LCD Gaming Monitor</h3>
+                            <p>$370 <span>$400</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(99)</span></span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="img">
+                            <div class="aksiya">-40%</div>
+                            <img src="assets/IMAGES/chair.png" alt="">
+                            <div class="add-to-cart">Add To Cart</div>
+                        </div>
+                        <div class="text">
+                            <h3>S-Series Comfort Chair</h3>
+                            <p>$375 <span>$400</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(99)</span></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button>View All Products</button>
         </div>
         <div class="win2">
             <div class="top">
-                <h1>Browse By Category</h1>
+                <div class="left">
+                    <h3 class="qiziiiil">
+                        Categories
+                    </h3>
+                    <h1>Browse By Category</h1>
+                </div>
                 <div class="swipe">
-                    <div class="keyingi1 swiper">
+                    <div class="orqa1 swiper">
                         <i class="fa-solid fa-left"></i>
                     </div>
-                    <div class="orqa1 swiper">
+                    <div class="keyingi1 swiper">
                         <i class="fa-solid fa-right"></i>
                     </div>
                 </div>
@@ -266,7 +277,10 @@
         </div>
         <div class="win2">
             <div class="top">
-                <h1>Best Selling Products</h1>
+                <div class="left">
+                    <h3 class="qiziiiil">This Month</h3>
+                    <h1>Best Selling Products</h1>
+                </div>
                 <button>View All</button>
             </div>
             <div class="products swiper product">
@@ -279,8 +293,8 @@
                         </div>
                         <div class="text">
                             <h3>The north coat</h3>
-                            <p>$260</p>
-                            <span>⭐⭐⭐⭐⭐</span>
+                            <p>$260 <span>$360</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(65)</span></span>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -291,8 +305,8 @@
                         </div>
                         <div class="text">
                             <h3>Gucci duffle bag</h3>
-                            <p>$960</p>
-                            <span>⭐⭐⭐⭐⭐</span>
+                            <p>$960 <span>$1160</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(65)</span></span>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -305,8 +319,8 @@
                         </div>
                         <div class="text">
                             <h3>RGB liquid CPU Cooler</h3>
-                            <p>$160</p>
-                            <span>⭐⭐⭐⭐⭐</span>
+                            <p>$160 <span>$170</span></p>
+                            <span>⭐⭐⭐⭐⭐ <span>(65)</span></span>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -318,7 +332,7 @@
                         <div class="text">
                             <h3>Small BookSelf</h3>
                             <p>$360</p>
-                            <span>⭐⭐⭐⭐⭐</span>
+                            <span>⭐⭐⭐⭐⭐ <span>(65)</span></span>
                         </div>
                     </div>
                 </div>
@@ -338,7 +352,12 @@
         </div>
         <div class="win4">
             <div class="top">
-                <h1>Explore Our Products</h1>
+                <div class="left">
+                    <h3 class="qiziiiil">
+                        Our Products
+                    </h3>
+                    <h1>Explore Our Products</h1>
+                </div>
                 <div class="swipe">
                     <div class="keyingi2 swiper">
                         <i class="fa-solid fa-left"></i>
@@ -367,7 +386,7 @@
                         </div>
                         <div class="text">
                             <h4>Breed Dry Dog Food</h4>
-                            <p><span>$100</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$100</span>⭐⭐⭐⭐⭐ <span class="spp">(35)</span></p>
                         </div>
                     </div>
                     <div class="card">
@@ -387,7 +406,7 @@
                         </div>
                         <div class="text">
                             <h4>CANON EOS DSLR Camera</h4>
-                            <p><span>$360</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$360</span>⭐⭐⭐⭐⭐ <span class="spp">(95)</span></p>
                         </div>
                     </div>
                     <div class="card">
@@ -407,7 +426,7 @@
                         </div>
                         <div class="text">
                             <h4>ASUS FHD Gaming Laptop</h4>
-                            <p><span>$700</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$700</span>⭐⭐⭐⭐⭐ <span class="spp">(325)</span></p>
                         </div>
                     </div>
                     <div class="card">
@@ -427,7 +446,7 @@
                         </div>
                         <div class="text">
                             <h4>Curology Product Set </h4>
-                            <p><span>$500</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$500</span>⭐⭐⭐⭐⭐<span class="spp">(145)</span></p>
                         </div>
                     </div>
                     <div class="card">
@@ -447,7 +466,7 @@
                         </div>
                         <div class="text">
                             <h4>Kids Electric Car</h4>
-                            <p><span>$960</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$960</span>⭐⭐⭐⭐⭐ <span class="spp">(65)</span></p>
                             <div class="ranglar">
                                 <div class="rang1">
                                     <div class="orqa"></div>
@@ -473,7 +492,7 @@
                         </div>
                         <div class="text">
                             <h4>Jr. Zoom Soccer Cleats</h4>
-                            <p><span>$1160</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$1160</span>⭐⭐⭐⭐⭐<span class="spp">(35)</span></p>
                             <div class="ranglar">
                                 <div class="rang1">
                                     <div class="orqa"></div>
@@ -499,7 +518,7 @@
                         </div>
                         <div class="text">
                             <h4>GP11 Shooter USB Gamepad</h4>
-                            <p><span>$660</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$660</span>⭐⭐⭐⭐⭐ <span class="spp">(55)</span></p>
                             <div class="ranglar">
                                 <div class="rang1">
                                     <div class="orqa"></div>
@@ -525,7 +544,7 @@
                         </div>
                         <div class="text">
                             <h4>Quilted Satin Jacket</h4>
-                            <p><span>$660</span>⭐⭐⭐⭐⭐</p>
+                            <p><span>$660</span>⭐⭐⭐⭐⭐ <span class="spp">(55)</span></p>
                             <div class="ranglar">
                                 <div class="rang1">
                                     <div class="orqa"></div>
@@ -536,10 +555,14 @@
                     </div>
                 </div>
             </div>
+            <button class="bttn">View All Products</button>
         </div>
         <div class="win5">
             <div class="top">
-                <h1>New Arrival</h1>
+                <div class="lefttt">
+                    <h3 class="qiziiiil">Featured</h3>
+                    <h1>New Arrival</h1>
+                </div>
             </div>
             <div class="bottom">
                 <div class="left">
@@ -593,11 +616,7 @@
                 <h4>MONEY BACK GUARANTEE</h4>
                 <p>We reurn money within 30 days</p>
             </div>
-            <a href="#header">
-                <i class="fa-regular fa-up"></i>
-            </a>
         </div>
-
     </main>
     <footer>
         <div class="center">
